--- a/index.html
+++ b/index.html
@@ -38,11 +38,16 @@ a.special, a.special:visited {
     </p>
 <p> In this  case, you help distributing the logs because your system becomes part of the planetary swarm that holds a copy of the data.</p>
 
+<h2>Contribute to the DB</h2>
+
+<p>Would you like your Duckiebot to become famous?</p>
+
+    <p>Please upload its logs <a href="https://www.dropbox.com/request/b3jPCrfNj8fiOfS6kNaD">at this link</a>.</p>
 
 <h2>Downloading the entire DB</h2>
 
 <p>The links above are to galleries that are meant for casual browsing.
-If you would like to download the entire set of logs, please contact us - we will show you a quick an most convenient way.
+If you would like to download the entire set of logs, please contact us - we will show you a quick and most convenient way.
 </p>
 
 </body></html>
