--- a/index.html
+++ b/index.html
@@ -24,10 +24,24 @@ a.special, a.special:visited {
 
 <h2>1. The easy way</h2>
 
-<p>Use the IPFS public gateway:<br/><br/>
+<p>Use one of the IPFS public gateways:<br/><br/>
 
-        <a class="special" href="http://gateway.ipfs.io/ipns/data.duckietown.org/">
-            <code>http://gateway.ipfs.io/ipns/data.duckietown.org/</code></a>
+        <a class="special" href="https://gateway.ipfs.io/ipns/data.duckietown.org/">
+            <code>https://gateway.ipfs.io/ipns/data.duckietown.org/</code></a>
+
+            <br/>
+            <a class="special" href="https://ipfs.infura.io/ipns/data.duckietown.org/">
+                <code>https://ipfs.infura.io/ipns/data.duckietown.org/</code></a>
+
+
+        <br/>
+        <a class="special" href="https://www.eternum.io/ipns/data.duckietown.org/">
+            <code>https://www.eternum.io/ipns/data.duckietown.org/</code></a>
+
+        <br/>
+        <a class="special" href="https://ipfs.wa.hle.rs/ipns/data.duckietown.org/">
+            <code>https://ipfs.wa.hle.rs/ipns/data.duckietown.org/</code></a>
+
 </p>
 <h2>2. The faster and altruistic way</h2>
 
