--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ body p {
 a { color: black; }
 a.special, a.special:visited {
     color: blue;
+    font-size: 80%;
 }
 </style>
 
@@ -24,31 +25,43 @@ a.special, a.special:visited {
 
 <h2>1. The easy way</h2>
 
-<p>Use one of the IPFS public gateways:<br/><br/>
+<p>For casual browsing, you can browse on one of our servers:<br/><br/>
 
-        <a class="special" href="https://gateway.ipfs.io/ipns/data.duckietown.org/">
-            <code>https://gateway.ipfs.io/ipns/data.duckietown.org/</code></a>
+    <a class="special" href="http://ipfs.duckietown.org:8080/ipfs/QmVMp86nmsuBH3mPvuej6xPfhuuHdwVQtQ3S6aHJMHumFa/">
+        <code>http://ipfs.duckietown.org:8080/ipfs/QmVMp86nmsuBH3mPvuej6xPfhuuHdwVQtQ3S6aHJMHumFa/</code></a>
+
+<p>However, please do not download large files from that server.</p>
+
+
+<p>Instead, use one of the IPFS public gateways:<br/><br/>
+
+        <a class="special" href="https://gateway.ipfs.io/ipfs/QmVMp86nmsuBH3mPvuej6xPfhuuHdwVQtQ3S6aHJMHumFa/">
+            <code>https://gateway.ipfs.io/ipfs/QmVMp86nmsuBH3mPvuej6xPfhuuHdwVQtQ3S6aHJMHumFa/</code></a>  (suggested)
 
             <br/>
-            <a class="special" href="https://ipfs.infura.io/ipns/data.duckietown.org/">
-                <code>https://ipfs.infura.io/ipns/data.duckietown.org/</code></a>
+            <a class="special" href="https://ipfs.infura.io/ipfs/QmVMp86nmsuBH3mPvuej6xPfhuuHdwVQtQ3S6aHJMHumFa/">
+                <code>https://ipfs.infura.io/ipfs/QmVMp86nmsuBH3mPvuej6xPfhuuHdwVQtQ3S6aHJMHumFa/</code></a>
 
 
         <br/>
-        <a class="special" href="https://www.eternum.io/ipns/data.duckietown.org/">
-            <code>https://www.eternum.io/ipns/data.duckietown.org/</code></a>
+        <a class="special" href="https://www.eternum.io/ipfs/QmVMp86nmsuBH3mPvuej6xPfhuuHdwVQtQ3S6aHJMHumFa/">
+            <code>https://www.eternum.io/ipfs/QmVMp86nmsuBH3mPvuej6xPfhuuHdwVQtQ3S6aHJMHumFa/</code></a>
 
         <br/>
-        <a class="special" href="https://ipfs.wa.hle.rs/ipns/data.duckietown.org/">
-            <code>https://ipfs.wa.hle.rs/ipns/data.duckietown.org/</code></a>
+        <a class="special" href="https://ipfs.wa.hle.rs/ipfs/QmVMp86nmsuBH3mPvuej6xPfhuuHdwVQtQ3S6aHJMHumFa/">
+            <code>https://ipfs.wa.hle.rs/ipfs/QmVMp86nmsuBH3mPvuej6xPfhuuHdwVQtQ3S6aHJMHumFa/</code></a>
 
 </p>
+
+<p>Note: it is the nature of IPFS that the first request on HTTP gateways is slow. Please be patient.</p>
+
+
 <h2>2. The faster and altruistic way</h2>
 
     <p>First, <a href="https://ipfs.io/docs/getting-started/">install the IPFS node on your system</a>.</p>
 
-    <p>Then browse at the local address:<br/><br/><a href="http://localhost:8080/ipns/data.duckietown.org/">
-             <code>http://localhost:8080/ipns/data.duckietown.org/</code></a>
+    <p>Then browse at the local address:<br/><br/><a href="http://localhost:8080/ipfs/QmVMp86nmsuBH3mPvuej6xPfhuuHdwVQtQ3S6aHJMHumFa/">
+             <code>http://localhost:8080/ipfs/QmVMp86nmsuBH3mPvuej6xPfhuuHdwVQtQ3S6aHJMHumFa/</code></a>
     </p>
 <p> In this  case, you help distributing the logs because your system becomes part of the planetary swarm that holds a copy of the data.</p>
 
